--- a/components/Skills/skills.module.css
+++ b/components/Skills/skills.module.css
@@ -10,3 +10,9 @@
   height: min-content;
   padding-bottom: 240px;
 }
+
+@media only screen and (max-width: 768px) {
+  .skillsContainerContent {
+    padding-bottom: 300px;
+  }
+}
